[gd_scene load_steps=10 format=3 uid="uid://d0yyg8docpy4c"]

[ext_resource type="PackedScene" uid="uid://csnjag86n3w3o" path="res://scene/Characters/Character.tscn" id="1_ptrt7"]
[ext_resource type="Script" path="res://scripts/base-Zombie.gd" id="2_jqjtr"]
[ext_resource type="Script" path="res://scripts/states/State Machine.gd" id="2_qkd5j"]
[ext_resource type="Script" path="res://scripts/states/Zombie_idle.gd" id="3_1dbcu"]
[ext_resource type="Texture2D" uid="uid://xoiv67aba2eu" path="res://GFX/PNG/Zombies/Base_zombie_16.png" id="3_c2hyr"]
[ext_resource type="Script" path="res://scripts/states/Zombie_movment.gd" id="4_hfxuq"]
[ext_resource type="Script" path="res://scripts/states/V-to-player-command.gd" id="6_m31nt"]

[sub_resource type="SpriteFrames" id="SpriteFrames_3j58r"]
resource_local_to_scene = true
animations = [{
"frames": [],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_c2hyr")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0o6g8"]
resource_local_to_scene = true
radius = 13.0
height = 26.0

[node name="Base_Zombie" groups=["s-b-zombie"] instance=ExtResource("1_ptrt7")]
collision_layer = 2
collision_mask = 7
script = ExtResource("2_jqjtr")

[node name="AnimatedSprite2D" parent="." index="1"]
sprite_frames = SubResource("SpriteFrames_3j58r")

[node name="State_Machine" type="Node" parent="." index="2" node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_qkd5j")
initial_state = NodePath("Zombie_idle")

[node name="Zombie_idle" type="Node" parent="State_Machine" index="0" node_paths=PackedStringArray("Zombie")]
script = ExtResource("3_1dbcu")
Zombie = NodePath("../..")

[node name="zombie_movment" type="Node" parent="State_Machine" index="1" node_paths=PackedStringArray("Zombie")]
script = ExtResource("4_hfxuq")
Zombie = NodePath("../..")

[node name="V_to_player_command" type="Node" parent="State_Machine" index="2" node_paths=PackedStringArray("Zombie")]
script = ExtResource("6_m31nt")
Zombie = NodePath("../..")

[node name="Zombie_hit_box" type="Area2D" parent="." index="3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Zombie_hit_box" index="0"]
position = Vector2(-2, 0)
shape = SubResource("CapsuleShape2D_0o6g8")

[node name="attack_cooldown" type="Timer" parent="." index="4"]

[node name="Health_bar" type="ProgressBar" parent="." index="5"]
offset_left = -12.0
offset_top = 12.0
offset_right = 8.0
offset_bottom = 16.0
show_percentage = false

[connection signal="body_entered" from="Zombie_hit_box" to="." method="_on_zombie_hit_box_body_entered"]
